# cloudreactor-procwrapper

./: .all-contributorsrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build_executable.sh  dev-base-requirements.in  dev-base-requirements.txt  dev-full-requirements.in  dev-full-requirements.txt  embedded_test.py  install_base_env.sh  install_dev_base_env.sh  install_dev_full_env.sh  proc_wrapper-requirements.in  proc_wrapper-requirements.txt  pyinstaller_install.sh  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/workflows/: binary-release.yml  ci.yml  labels.yml  pre-commit-autoupdate.yml  release.yml  semantic-release.yml
docs/source/: conf.py  index.md  installation.md  usage.md
executable_builder/: Dockerfile-linux-amd64  Dockerfile-win64  build_linux_amd64.sh  build_win64.sh
executable_builder/win64/: build.sh
nuitka_builder/: Dockerfile-al2  Dockerfile-debian-amd64  Dockerfile-linux-amd64  build_al2.sh  build_debian_amd64.sh  build_debian_multiarch.sh  build_linux_amd64.sh  build_linux_amd64_with_docker.sh  nuitka-requirements.in  nuitka-requirements.txt
proc_wrapper/: __init__.py  __main__.py  arg_parser.py  common_constants.py  common_utils.py  config_resolver.py  env_resolver.py  proc_wrapper.py  proc_wrapper_params.py  runtime_metadata.py  status_updater.py
pyinstaller_builder/: Dockerfile-al2  Dockerfile-al2023  Dockerfile-debian-amd64  Dockerfile-linux-amd64  Dockerfile-win64  build_al2.sh  build_al2023.sh  build_debian_amd64.sh  build_linux_amd64.sh  build_win64.sh
tests/: config_resolver_test.py  env_resolver_test.py  proc_wrapper_params_test.py  proc_wrapper_test.py  runtime_metadata_test.py  test_commons.py
tests/data/: config.json  config_json.txt  test.env
tests/integration/: .gitignore  codebuild.sh  common.env  common_env.sh  managed_call_test.py  secret.env.sample  secret_env_sample.sh  sleep.py  sleep_with_update.py  test_env_sample.sh  wrap_test.sh  wrap_test_with_update.sh
tests/integration/nuitka_executable/: test_al2.sh  test_debian_amd64.sh  test_fedora_amd64.sh  test_linux_amd64.sh
tests/integration/nuitka_executable/docker_context_debian_amd64/: Dockerfile
tests/integration/nuitka_executable/docker_context_linux_amd64/: Dockerfile
tests/integration/pyinstaller_executable/: test_al2.sh  test_al2023.sh  test_debian_amd64.sh  test_fedora_amd64.sh  test_linux_amd64.sh
tests/integration/pyinstaller_executable/docker_context_al2/: Dockerfile
tests/integration/pyinstaller_executable/docker_context_al2023/: Dockerfile
tests/integration/pyinstaller_executable/docker_context_fedora_amd64/: Dockerfile
tests/integration/pyinstaller_executable/docker_context_linux_amd64/: Dockerfile
tests/integration/standalone_executable/: test_linux_amd64.sh
tests/integration/standalone_executable/docker_context_linux_amd64/: Dockerfile
tests/integration/standalone_executable/src/: entrypoint.sh
