[tool.poetry]
name = "cloudreactor-procwrapper"
version = "3.0.1"
description = "Wraps the execution of processes so that a service API endpoint (CloudReactor) can monitor and manage them. Also implements retries, timeouts, and secret injection from AWS into the environment."
authors = [
    "Jeff Tsay <jeff@cloudreactor.io>"
]
license = "Dual license, MPL 2.0 or commercial"
readme = "README.md"
repository = "https://github.com/CloudReactor/cloudreactor-procwrapper"
documentation = "https://cloudreactor-procwrapper.readthedocs.io"
homepage = "https://cloudreactor.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "proc_wrapper" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CloudReactor/cloudreactor-procwrapper/issues"
"Changelog" = "https://cloudreactor-procwrapper.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.6"

# Documentation Dependencies
Sphinx = {version = "^3.3.0", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}
myst-parser = {version = "^0.13.0", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
boto3 = "^1.16.56"
jsonpath-ng = "^1.5.2"
pyyaml = "^5.4.1"
python-dotenv = "^0.17.1"
mergedeep = "^1.3.4"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-env = "^0.6.2"
pytest-httpserver = "^0.3.6"
tox = "^3.20.1"
mypy = "^0.790"
boto3-stubs = "^1.16.56.0"
moto = "^1.3.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "proc_wrapper/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=proc_wrapper"

[tool.isort]
profile = "black"
known_first_party = ["proc_wrapper", "tests"]
