[tool.poetry]
name = "cloudreactor-procwrapper"
version = "4.0.0"
description = "Wraps the execution of processes so that a service API endpoint (CloudReactor) can monitor and manage them. Also implements retries, timeouts, and secret injection from AWS into the environment."
authors = [
    "Jeff Tsay <jeff@cloudreactor.io>"
]
license = "Dual license, MPL 2.0 or commercial"
readme = "README.md"
repository = "https://github.com/CloudReactor/cloudreactor-procwrapper"
documentation = "https://cloudreactor-procwrapper.readthedocs.io"
homepage = "https://cloudreactor.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "proc_wrapper" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CloudReactor/cloudreactor-procwrapper/issues"
"Changelog" = "https://cloudreactor-procwrapper.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.7"

# Documentation Dependencies
Sphinx = {version = "^3.5.4", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
myst-parser = {version = "^0.17.2", optional = true}
# Jinja 3.1.0 breaks this version of Sphinx
# https://github.com/apache/flink/pull/19238
Jinja2 = {version = "3.0.3"}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
boto3 = "^1.22.9"
jsonpath-ng = "^1.5.3"
pyyaml = "^6.0"
types-PyYAML = "^6.0.7"
python-dotenv = "^0.20.0"
mergedeep = "^1.3.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-httpserver = "^1.0.4"
tox = "^3.25.0"
mypy = "^0.950"
boto3-stubs = "^1.22.9"
moto = "^3.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "proc_wrapper/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=proc_wrapper"

[tool.isort]
profile = "black"
known_first_party = ["proc_wrapper", "tests"]
