[tool.poetry]
name = "cloudreactor-procwrapper"
version = "6.0.0"
description = "Wraps the execution of processes so that a service API endpoint (CloudReactor) can monitor and manage them. Also implements retries, timeouts, and secret injection from AWS into the environment."
authors = [
    "Jeff Tsay <jeff@cloudreactor.io>"
]
license = "Dual license, MPL 2.0 or commercial"
readme = "README.md"
repository = "https://github.com/CloudReactor/cloudreactor-procwrapper"
documentation = "https://cloudreactor-procwrapper.readthedocs.io"
homepage = "https://cloudreactor.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "proc_wrapper" },
    { include = "proc_wrapper/py.typed" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CloudReactor/cloudreactor-procwrapper/issues"
"Changelog" = "https://cloudreactor-procwrapper.readthedocs.io/en/latest/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"

boto3 = { version = ">=1.16.0", optional = true }
ec2-metadata = { version = ">=2.14.0", optional = true }
jsonpath-ng = { version = ">=1.5.0", optional = true }
mergedeep = { version = ">=1.3.0", optional = true }
python-dotenv = { version = ">=0.17.0", optional = true }
pyyaml = { version = ">=5.5.0", optional = true }

[tool.poetry.extras]
aws = ["boto3"]
ec2 = ["ec2-metadata"]
jsonpath = ["jsonpath-ng"]
mergedeep = ["mergedeep"]
dotenv = ["python-dotenv"]
yaml = ["pyyaml"]
allextras = ["boto3", "ec2-metadata", "jsonpath-ng", "mergedeep", "python-dotenv", "pyyaml"]

[tool.poetry.scripts]
# proc_wrapper = { reference = "proc_wrapper.__main__:main", extras = ["allextras"], type = "console" }
proc_wrapper = "proc_wrapper.__main__:main"

[tool.poetry.group.dev.dependencies]
boto3 = ">=1.36.13"
ec2-metadata = ">=2.14.0"
jsonpath-ng = ">=1.5.3"
pyyaml = "^6.0"
types-PyYAML = "^6.0.7"
python-dotenv = "^1.0.1"
mergedeep = "^1.3.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.17.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-httpserver = "^1.0.4"
tox = "^3.25.0"
mypy = "^1.3.0"
boto3-stubs = ">=1.26.165"
moto = ">=5.0.9"
types-python-dateutil = "^2.8.17"
freezegun = ">=1.4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.17.2"
# Jinja 3.1.0 breaks this version of Sphinx
# https://github.com/apache/flink/pull/19238
Jinja2 = "3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "proc_wrapper/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=proc_wrapper"

[tool.isort]
profile = "black"
known_first_party = ["proc_wrapper", "tests"]
